--- a/BSPLumpCompare/BSPLumpCompare.csproj
+++ b/BSPLumpCompare/BSPLumpCompare.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>BSPLumpExtract.Program</StartupObject>
+    <StartupObject>BSPLumpCompare.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
