Extensive documentation and code refactoring
* Lump data reading has been moved to the lump class
* Make better use of fields, removed SetData method, removed the unnecessary Length field, updated access to make more sense.
* Updated GameLump class, supports adding/removing game lump items, removed the obsolete Length and LocalOffset fields, game lump item data reading is now contained in the game lump item class.
* Added FileFormatException class, removed any other case of Exception class usage
* FileFinder interface now makes more sense.
* Added methods to BSP class to directly read/write data to .bsp and .lmp files.

--- a/BSPLumpCompare/Properties/launchSettings.json
+++ b/BSPLumpCompare/Properties/launchSettings.json
@@ -1,8 +1,9 @@
 {
-  "profiles": {
-    "BSPLumpCompare": {
-      "commandName": "Project",
-      "commandLineArgs": "\"F:\\SteamLibrary\\steamapps\\common\\GarrysMod\\garrysmod\\addons\\dis\\fm_sewers_dev\\maps\\test\\fm_sewers_dev.bsp\" \"F:\\SteamLibrary\\steamapps\\common\\GarrysMod\\garrysmod\\addons\\dis\\fm_sewers_dev\\maps\\test\\VIDE result\\fm_sewers_dev.bsp\""
-    }
-  }
+	"profiles": {
+		"BSPLumpCompare": {
+			"commandName": "Project",
+			"commandLineArgs":
+				"\"F:\\SteamLibrary\\steamapps\\common\\GarrysMod\\garrysmod\\addons\\dis\\fm_sewers_dev\\maps\\test\\fm_sewers_dev.bsp\" \"F:\\SteamLibrary\\steamapps\\common\\GarrysMod\\garrysmod\\addons\\dis\\fm_sewers_dev\\maps\\test\\VIDE result\\fm_sewers_dev.bsp\""
+		}
+	}
 }
