--- a/BSPLumpExtract/Properties/launchSettings.json
+++ b/BSPLumpExtract/Properties/launchSettings.json
@@ -1,8 +1,9 @@
 {
-  "profiles": {
-    "BSPLumpExtract": {
-      "commandName": "Project",
-      "commandLineArgs": "\"F:\\SteamLibrary\\steamapps\\common\\GarrysMod\\garrysmod\\addons\\dis\\fm_sewers_dev\\maps\\test\\fm_sewers_dev.bsp\" 0"
-    }
-  }
+	"profiles": {
+		"BSPLumpExtract": {
+			"commandName": "Project",
+			"commandLineArgs":
+				"\"F:\\SteamLibrary\\steamapps\\common\\GarrysMod\\garrysmod\\addons\\dis\\fm_sewers_dev\\maps\\test\\fm_sewers_dev.bsp\" 0"
+		}
+	}
 }
