Start of implementing commandlineparser for parsing commandline

--- a/BSPLumpCompare/BSPLumpCompare.csproj
+++ b/BSPLumpCompare/BSPLumpCompare.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LibBSP\LibBSP.csproj" />
   </ItemGroup>
 
