Added tests for BSP and Lump classes
Tests now fully cover LibBSP!

--- a/BSPUtilsTest/BSPUtilsTest.csproj
+++ b/BSPUtilsTest/BSPUtilsTest.csproj
@@ -21,6 +21,9 @@
     <None Update="testdata\map.bsp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="testdata\map.vmf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
